lib_LTLIBRARIES = libtlacotes.la

libtlacotes_la_CFLAGS = -Wall \
    -I $(srcdir)/../../../src \
    -I $(srcdir)/../../../lib \
    -I $(srcdir)/../../../src/tl \
    -I ../../../src \
    -I ../../../src/tl \
    -I ../../../lib 

libtlacotes_la_CXXFLAGS = -Wall \
    -I $(srcdir)/../../../src \
    -I $(srcdir)/../../../lib \
    -I $(srcdir)/../../../src/tl \
    -I ../../../src \
    -I ../../../src/tl \
    -I ../../../lib

libtlacotes_la_SOURCES = \
						tl-mintakatransformhelper.hpp \
						tl-mintakatransformhelper.cpp \
						tl-statetransformhelper.hpp \
						tl-statetransformhelper.cpp \
						tl-streaminfo.hpp \
						tl-streaminfo.cpp \
						tl-streamtransformhelper.hpp \
						tl-streamtransformhelper.cpp \
						tl-symboltransformhelper.hpp \
						tl-symboltransformhelper.cpp \
						tl-taskgroupinfo.hpp \
						tl-taskgroupinfo.cpp \
						tl-taskinfo.hpp \
						tl-taskinfo.cpp \
						tl-tasktransformhelper.hpp \
						tl-tasktransformhelper.cpp \
						tl-threadtransformhelper.hpp \
						tl-threadtransformhelper.cpp \
						tl-targetinfo.hpp \
						tl-targetinfo.cpp \
						tl-targetstreaminfo.hpp \
						tl-targetstreaminfo.cpp \
						tl-transform.hpp \
						tl-transform.cpp \
						tl-transformmintakaoutline.hpp \
						tl-transformmintakaoutline.cpp \
						tl-transformtargetdeclare.hpp \
						tl-transformtargetdeclare.cpp \
						tl-transformtargetreplace.hpp \
						tl-transformtargetreplace.cpp \
						tl-transformtaskdeclarestate.hpp \
						tl-transformtaskdeclarestate.cpp \
						tl-transformtaskgroupdeclarestreams.hpp \
						tl-transformtaskgroupdeclarestreams.cpp \
						tl-transformtaskgroupreplace.hpp \
						tl-transformtaskgroupreplace.cpp \
						tl-transformtaskoutline.hpp \
						tl-transformtaskoutline.cpp \
						tl-transformtaskreplace.hpp \
						tl-transformtaskreplace.cpp \
						tl-acotestransform.hpp \
						tl-acotestransform.cpp
